--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -6,7 +6,7 @@
   type="{{ button.type }}"
 >
   {{#if button.icon}}
-    <img class="button__icon" src="{{ button.icon }}" alt="" />
+    <img class="button__icon" src="{{ button.icon }}" alt="icon of the button" />
   {{/if}}
   {{ button.label }}
 </button>
